added all valorant agents

--- a/index.html
+++ b/index.html
@@ -27,18 +27,29 @@
         </div>
 
         <div id="initiators_screen" style="--pageorder: 1" data-flickity='{ "wrapAround": true, "pageDots": false }' >
-            <character id="Yoru"> <rolenav class="initiator"></rolenav> </character>
-            <character id="Phoenix"> <rolenav class="initiator"></rolenav> </character>
+            <character id="Sova"> <rolenav class="initiator"></rolenav> </character>
+            <character id="Breach"> <rolenav class="initiator"></rolenav> </character>
+            <character id="Skye"> <rolenav class="initiator"></rolenav> </character>
+            <character id="KAYO"> <rolenav class="initiator"></rolenav> </character>
+            <character id="Fade"> <rolenav class="initiator"></rolenav> </character>
+            <character id="Gekko"> <rolenav class="initiator"></rolenav> </character>
         </div>
 
         <div id="sentinels_screen" style="--pageorder: 2" data-flickity='{ "wrapAround": true, "pageDots": false }' >
-            <character id="Neon"> <rolenav class="sentinel"></rolenav> </character>
-            <character id="Iso"> <rolenav class="sentinel"></rolenav> </character>
+            <character id="Sage"> <rolenav class="sentinel"></rolenav> </character>
+            <character id="Cypher"> <rolenav class="sentinel"></rolenav> </character>
+            <character id="Killjoy"> <rolenav class="sentinel"></rolenav> </character>
+            <character id="Chamber"> <rolenav class="sentinel"></rolenav> </character>
+            <character id="Deadlock"> <rolenav class="sentinel"></rolenav> </character>
         </div>
 
         <div id="controllers_screen" style="--pageorder: 3" data-flickity='{ "wrapAround": true, "pageDots": false }' >
             <character id="Viper"> <rolenav class="controller"></rolenav> </character>
-            <character id="Reyna"> <rolenav class="controller"></rolenav> </character>
+            <character id="Brimstone"> <rolenav class="controller"></rolenav> </character>
+            <character id="Omen"> <rolenav class="controller"></rolenav> </character>
+            <character id="Astra"> <rolenav class="controller"></rolenav> </character>
+            <character id="Harbor"> <rolenav class="controller"></rolenav> </character>
+            <character id="Clove"> <rolenav class="controller"></rolenav> </character>
         </div>
     </div>
 
